theortical background complemented

--- a/major_project_report/main.tex
+++ b/major_project_report/main.tex
@@ -40,8 +40,8 @@
 \input{sec/introduction}
 \input{sec/literature_review}
 \input{sec/theoretical_background}
-\input{sec/system_analysis}
 \input{sec/methodology}
+\input{sec/system_design}
 \input{sec/system_implementation}
 \input{sec/tools_technologies}
 \input{sec/result}
