--- a/major_project_report/sec/introduction.tex
+++ b/major_project_report/sec/introduction.tex
@@ -7,7 +7,7 @@ Besides, these days social networks have become widely used and popular mediums 
 
 Pervious work has shown that the information in user's social media account is reflective of their actual personalities, not an idealized version of themselves which makes a broad user base social networking site Facebook, an ideal platform in order to study the personality traits of an user. Several well studied personality models have been proposed, among which the "Big Five Model" as known as "Five Factor Model"(FFM) is the most popular one (Goldberg 1992)\cite{fivefactormodel}.
 
-\subsection{BACKGROUND}
+\subsection{Background}
 The Big Five Model of personality dimensions has emerged as one of the most well-researched and well-regarded measures of personality structure in recent yeas \cite{fivefactormodel}. The model five domains of personality: Openness, Conscientiousness, Extroversion, Agreeableness and Neuroticism, were conceived by Tupes and Christal \cite{tupes} as the fundamental traits that emerged from analyses of previous personality tests. McCrae, Costa and John \cite{mccrae} continued five factor model research and consistently found generality across age, gender and cultural lines.
 The Big Five Model traits are characterized by the following:
 \begin{enumerate}
@@ -46,26 +46,26 @@ Some sample items used by person with this traits are:
 	\item I get upset easily.
 \end{itemize}
 \end{enumerate}
-\subsection{MOTIVATION}
+\subsection{Motivation}
 The growth in the amount of digital information and the number of visitors ot the Internet have created a potential challenge of information overload which hinders timely access to items of interest on the Internet. Thus there has been increased in the demand for the best recommender system more than ever before. And music is essential to many of our lives. We listen to it whenwaking up, while in transit at work, and with our friends. For many, music is like a constant companion. It can bring us joy and motivate us, accompany us through difficult times and alleviate our worries. Hence music is much more than mere entertainment, but as stated earlier, growth in the amount of digital information have created a potential challenge of information overload where a recommendation engine plays a very crucial role in filtering the vital fragment out of large amount of dynamically generated information according to user's preferences, interest or observed behavior about item. 
 Hence,with this project, we attempt to devise a method to improve the collaborative filtering engine via the use of personality in order to compute the similar user's for the recommendation of music as it is believed, person with similar personality has similar tast in music. 
 
-\subsection{OBJECTIVES}
+\subsection{Objectives}
 The objectives of the project can be summarized with the points below:
 \begin{enumerate}
 \item To find out if the personality of the user can be a curical factor in the music recommendation system.
 \item To find out if collaborative recommendation engine can be enhanced via the use of personality for similar user computation.
 \end{enumerate}
 
-\subsection{PROBLEM STATEMENT}
+\subsection{Problem Statement}
 
-\subsection{SCOPE OF THE PROJECT}
+\subsection{Scope of the Project}
 The most important scope of the project will be to discover if the personality traits of an individual can be used for the enhancement of the recommendation engine in order to provide the more personalized content to the user asa recommendation.
 
-\subsection{UNDERSTANDING OF REQUIREMENT}
+\subsection{Understanding Of Requirement}
 Nowadays, digital data on the internet has been massive than ever, which have created a potential challenge of information overload, hindering timely access of items of interest on the Internet. So, there is a requirement for the better recommendation system than ever. Thus with this project, we will try to find out if the recommendation engine can perform better if personalityof the individual is used as one of the metrics for a recommendation. Nowadays, social networking sites have become vastly popular among several people of different religion, caste, ethnic groups and different location of the world, which shows how culturally diverse the people around the world is. And in this diversity, we can also see the varities in the personalities of people living in different parts of the world. The main purpose of the social nenetworking sites are to connect different peoples from different parts of ththe world which makes it the most suitable platform in order to study the personality traits of the user. Thus studied personality traits can be used inrecommendation engine in order to improve it's efficiency and with it's project we aim to prove that indeed the personality can be used to do so.
 
-\subsection{ORGANIZATION OF REPORT}
+\subsection{Organization of the Report}
 The organization of the report is done in the following ways:
 \begin{enumerate}
 \item Chapter 1: It includes the introduction about the problem and the method we are trying to employ to solve. 
