--- a/major_project_report/sec/methodology.tex
+++ b/major_project_report/sec/methodology.tex
@@ -1,8 +1,30 @@
 \newpage
-\section{SYSTEM DESIGN}
+\section{METHODOLOGY}
 
-The system uses initally predicts the personality of the user with the help of their social media account(facebook). Thus initially a classifier is to be trained to classify the personality of the user on the basis of their status update. Afterwards, the predicted personality of the user is to be used as one the metrics for the similar user computation in collaborative filtering and the effect of the personality on the colloaborative filtering engine was observed.
-\subsection{SOFTWARE DEVELELOPMENT APPROACH}
+\subsection{Requirement Specification}
+A software requirement specification is a description of a software system to be develped. It lays out functional and non-functional requirements. It describes what the software product is expected to do and what not to do. It enlists enough and necessary requirements that are required for the project development. It mainly aids to describe the scope of the work and provide a software designers a form of reference.
+\subsubsection{Functional Requirement}
+The functional requirement specification of the project are mainly categorized as user requirements, security requirements, and device requirement each of which are explained in detail below:
+\begin{itemize}
+\item User Requirement: User should have account on Facebook and usermust have at least one post needed to analyze the personality.
+\item Security Requirement: The user can't have access to the Facebook API. User must provide their own login credentials.
+\item Device Requirement: System must be initiated on web-browser.
+
+\end{itemize}
+\subsubsection{Non-functional Requirement}
+The non-functional requirement of the system can be summarized as follows:
+\begin{itemize}
+\item Performance: The system shall have a quick, accurate and reliable reuslts.
+\item Capacity and Scalability: The system shall be able to store personality computed by the system into the database.
+\item Availability: The system shall be avilable to user anytime whenever there is an internet connection.
+\item Recovery: In case of malfunctioning or unavailability of server, the system should be able to recover and prevent any data loss or redundancy.
+\item Flexibility and Portability: System shall be accessible anytime from any locations. 
+\end{itemize}
+\subsection{Feabisility Assessment}
+\subsubsection{Operational Feasiblility}
+\subsubsection{Technical Feasiblility}
+\subsubsection{Economic Feasibility}
+\subsection{Software Development Approach}
 The developed system, being huge and dynnamic nature, may not be developed eefficiently and timely procured with the traditional development approaches like waterfall. Thus to meet the requirements of the system and ensuring the timely delivery and adaptibility for changing requirement, Scrum methodology under the Agile Development method is chosen for the developement of system.
 
 Scrum is an agile way to manage project. Agile software developlment with Scrum is often perceived as a methodology, but rather than viewing Scrum as methodology, it is often thought as a framework for managing a process. In the agile Scrum world, instead of providing complete, detailed descriptions of how everything is to be done on a project,much of it is left up to Scrum software development team. This is because the team will know best how to solve the problem they are presented. It relies on a self-organizing, cross-functional team. The scrum team is self-organizing in that there is no overall team leader whodecides which person will do which task or how a problem will be solved. This is the issue that are decided by the team as a whole. Besides the team is cross functional, because of which everyone is needed to take a feature from idea to implementation. 
@@ -22,17 +44,7 @@ Hence scrum is adpative, has small repeating cycles and there is short-term plan
 \label{fig:scrum}
 \end{figure}
 
-\subsection{SYSTEM ARCHITECTURE}
-The give figure below is the architectural diagram of the project showing the process that are involved during the development of the project.
-
-\begin{figure}[!h]
-\centering
-\includegraphics[width = 16 cm]{fig/pbrs.png}
-\caption{block diagram of the system}
-\label{fig:project}
-\end{figure}
-
-The diagram shows the overall processes and phases of the system which are briefly described below:
+\subsection{Data Collection}
 
 
 
