--- a/major_project_report/sec/references.tex
+++ b/major_project_report/sec/references.tex
@@ -3,7 +3,9 @@
 \phantomsection
 \addcontentsline{toc}{section}{References}
 \begin{thebibliography}{9}
-
+	\bibitem{dataset}
+		myPersonality DataSet \url{ http://mypersonality.org/wiki/doku.php}
+	
  \bibitem{fivefactormodel}
 	 Five Factor Model of Personality: Goldberg LR, et al.(2006) \textit{The international personality item pool and the future of pulic-domain personality measures J Res Pers}, 40(1):8486.
  
@@ -62,11 +64,24 @@ Data Analysis. \url{https://www.ngdata.com/what-is-data-analysis}
 	F.O. Isinkaye, Y.O. Folajimi and B.A. Ojokoh.(2015). Recommendation Systems: Principles, methods and evaluation \textit{Egyptian Informatics Journal}.
 \bibitem{latent}
 	Non-negative matrix factorization \url{https://www.slideshare.net/BenjaminBengfort/non-negative-matrix-factorization}
+\bibitem{manning}
+Christopher Manning, Stanford NLP - Standford NLP Group. \url{https://nlp.standford.edu/manning}
+\bibitem{coursera}
+	Recommendation System, Coursera. \url{https://coursera.org/learn/machine-learning}
+\bibitem{traits}
+Studying the big five personality traits-UK Essays. \url{https://ukessays.com/essays/psychology/studying-the-big-five-personality-traits.php}
+
+\bibitem{eval}
+D. Alexander. (2009) Collaborative Fileringand Recommender Systems
+\bibitem{tfidf}
+TF-IDF. \url{http://www.tfidf.com/} 2015
+\bibitem{api}
+Facebook Graph API \url{https://developers.facebook.com/docs/graph-api}
   \bibitem{ng}
   Andrew Ng. (2016). Machine Learning [Video lectures].
   Retrieved July, 2016 from \url{https://www.coursera.org/learn/machine-learning}.
 
-  \bibitem{wiki-logistic-regression}
+  \bibitem{wikilog}
   Logistic Regression. (n.d.). {\em In Wikipedia}. Retrieved July 23, 2016 from
   \url{https://en.wikipedia.org/wiki/Logistic_regression}.
 
