System designed almost half

--- a/major_project_report/sec/system_design.tex
+++ b/major_project_report/sec/system_design.tex
@@ -110,3 +110,15 @@ The entities in the system are:
 \caption{Data Flow Diagram of the System}
 \label{fig:dfd}
 \end{figure}
+
+\newpage
+\subsection{Front End of the System}
+\begin{figure}[!ht]
+\centering
+\includegraphics[width = 16 cm]{fig/System.png}
+\caption{Front of the System}
+\label{fig:front}
+\end{figure}
+
+\newpage
+\subsection{Back End of the System}
