--- a/major_project_report/sec/theoretical_background.tex
+++ b/major_project_report/sec/theoretical_background.tex
@@ -435,10 +435,10 @@ Knowledge based recommendation system \cite{recommend} is based on the explicit 
 
 \subsubsection{Utility based Recommednation}
 Utility based recommender system make recommendation based on the calculation of the utility of each item for the user. Utility based recommender techniques uses multi-attribute utility function based on item rates that user offer to describe user preferences and apply the utiltiy function to calculate item utility for each user.
-%\paragraph{Working Mechanism}\hfill
-%\begin{enumerate}
-%	\item Hell
-%\end{enumerate}
+\paragraph{Working Mechanism}\hfill
+\begin{enumerate}
+	\item Recommendation: Compute the utility of each object for the user and recommend accordingly. 
+\end{enumerate}
 \paragraph{Pros}\hfill
 
 \begin{itemize}
